--- a/MenuLaunch.vcxproj
+++ b/MenuLaunch.vcxproj
@@ -331,6 +331,10 @@
     <ClInclude Include="ml_window.hpp" />
     <ClInclude Include="ml_xml.hpp" />
     <ClInclude Include="Plugin.hpp" />
+    <ClInclude Include="rapidxml.hpp" />
+    <ClInclude Include="rapidxml_iterators.hpp" />
+    <ClInclude Include="rapidxml_print.hpp" />
+    <ClInclude Include="rapidxml_utils.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Utility.hpp" />
   </ItemGroup>
