TODO:text-encoding

--- a/MenuLaunch.vcxproj
+++ b/MenuLaunch.vcxproj
@@ -336,6 +336,7 @@
     <ClInclude Include="rapidxml_print.hpp" />
     <ClInclude Include="rapidxml_utils.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Transcode.hpp" />
     <ClInclude Include="Utility.hpp" />
   </ItemGroup>
   <ItemGroup>
